App config / Connection with database

--- a/package.json
+++ b/package.json
@@ -5,8 +5,15 @@
   "repository": "https://github.com/celsoyh/nodeChallenge-02.git",
   "author": "Celso Hashimoto <celsoyh@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/server.js"
+  },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^7.12.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.19.6",
+    "sequelize-cli": "^5.5.1"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
